# SubConsole

./: CODE_OF_CONDUCT.md  README.md
.github/: CONTRIBUTING.md
src/subconsole/: __init__.py  pyproject.toml  settings_manager.py  subconsole.py
src/subconsole/core/: __init__.py  subshell.py
src/subconsole/disk/: settings.json
src/subconsole/docs/: USER.md  subapplication.md
src/subconsole/docs/development/: changelog.md  issues.md  roadmap.md
src/subconsole/scripts/: __init__.py  script_manager.py
src/subconsole/scripts/apps/: __init__.py  hello_widgets.py  helloworld.py  help.py
src/subconsole/scripts/help/: __init__.py  help_assets.py
src/subconsole/subapplication/: __init__.py  subapplication.py
src/subconsole/ui/: __init__.py  interface.py  ui_graphics.py
